# LibGL

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
assets/shaders/: Basic.glsl  BlinnPhong.frag  Default.glsl  Depth.glsl  DrawDepth.glsl  Lit.glsl  Normal.glsl  Split.frag  Split.glsl  Split.vert  Test.glsl
dependencies/: CMakeLists.txt
dependencies/GLAD/: CMakeLists.txt
source/: CMakeLists.txt
source/App/: CMakeLists.txt
source/App/include/: Application.h  EInputModifier.h  EKey.h  EKeyState.h  EMouseButton.h  EMouseButtonState.h  IApplication.h  IContext.h  InputManager.h  Window.h
source/App/src/: Application.cpp  GFLWApp.cpp  IApplication.cpp  IContext.cpp  InputManager.cpp  Window.cpp  main.cpp
source/Core/: CMakeLists.txt
source/Core/include/: utility.h
source/Core/include/DataStructure/: Graph.h  Graph.inl  Node.h  Node.inl
source/Core/include/Debug/: Assertion.h  Log.h  Log.inl
source/Core/include/Eventing/: Event.h  Event.inl  EventManager.h  EventManager.inl
source/Core/include/Maths/Vector/: Vector4.h
source/Core/include/Resources/: IResource.h  IResource.inl  ResourceManager.h  ResourceManager.inl  ResourcesManager.inl
source/Core/include/Utility/: ServiceLocator.h  ThreadPool.h  ThreadPool.inl  Timer.h  utility.h  utility.inl
source/Core/src/: utility.cpp
source/Core/src/DataStructure/: Graph.cpp  Node.cpp
source/Core/src/Debug/: Assertion.cpp  Log.cpp
source/Core/src/Maths/: Angle.cpp  Arithmetic.cpp  Matrix.cpp  Trigonometry.cpp  Vector.cpp
source/Core/src/Resources/: ResourceManager.cpp
source/Core/src/Utility/: ThreadPool.cpp  Timer.cpp  utility.cpp
source/Demo/: CMakeLists.txt
source/Demo/include/: DemoApp.h  DemoContext.h
source/Demo/src/: DemoApp.cpp  DemoContext.cpp  main.cpp
source/Entities/: CMakeLists.txt
source/Entities/include/: Component.h  Entity.h  Entity.inl  Scene.h
source/Entities/src/: Component.cpp  Entity.cpp  Scene.cpp
source/LowRenderer/: CMakeLists.txt
source/LowRenderer/include/: Camera.h  Light.h  Material.h  Mesh.h
source/LowRenderer/src/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp
source/Physics/: CMakeLists.txt
source/Physics/include/: BoxCollider.h  CapsuleCollider.h  ColliderOverlaps.h  ECollisionDetectionMode.h  EForceMode.h  ICollider.h  Raycast.h  Rigidbody.h  SphereCollider.h  Transform.h
source/Physics/src/: BoxCollider.cpp  CapsuleCollider.cpp  ColliderOverlaps.cpp  ICollider.cpp  Raycast.cpp  Rigidbody.cpp  SphereCollider.cpp  Transform.cpp
source/Rendering/: CMakeLists.txt
source/Rendering/include/Core/: Color.h  IDrawable.h  Renderer.h  SceneRenderer.h  Vertex.h  VertexAttributes.h
source/Rendering/include/Core/Buffers/: Buffer.h  FrameBuffer.h  IndexBuffer.h  ShaderStorageBuffer.h  ShaderStorageBuffer.inl  VertexBuffer.h
source/Rendering/include/Enums/: EAccessSpecifier.h  EBlendFactor.h  ECompareAlgorithm.h  ECullFace.h  EFrameBufferAttachment.h  ELightType.h  EMaterialMap.h  ERenderingCapability.h  ETextureFilter.h  ETextureFormat.h  ETextureWrapMode.h
source/Rendering/include/LowRenderer/: Camera.h  Light.h  Mesh.h  Model.h
source/Rendering/include/Resources/: Material.h  Mesh.h  MeshMulti.h  Model.h  ModelMulti.h  Shader.h  Texture.h
source/Rendering/src/Core/: Color.cpp  Renderer.cpp  SceneRenderer.cpp  VertexAttributes.cpp
source/Rendering/src/Core/Buffers/: Buffer.cpp  FrameBuffer.cpp  IndexBuffer.cpp  ShaderStorageBuffer.cpp  VertexBuffer.cpp
source/Rendering/src/LowRenderer/: Camera.cpp  Light.cpp  Mesh.cpp  Model.cpp
source/Rendering/src/Resources/: Material.cpp  Mesh.cpp  MeshMulti.cpp  Model.cpp  ModelMulti.cpp  Shader.cpp  Texture.cpp
source/Resources/: CMakeLists.txt
source/Resources/include/: IResource.h  Model.h  ResourcesManager.h  ResourcesManager.inl  Scene.h  Shader.h  Texture.h  Vertex.h
source/Resources/src/: Model.cpp  ResourcesManager.cpp  Scene.cpp  Shader.cpp  Texture.cpp
